--- a/style/style.css
+++ b/style/style.css
@@ -281,3 +281,111 @@
     font-size: 20px;
     font-weight: 400;
 }
+
+.image-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    margin: 0px 300px;
+    padding-top: 50px;
+}
+
+.image-item {
+    overflow: hidden;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.image-container img {
+    max-width: 100%;
+    height: auto;
+}
+
+.subscriber {
+    width: 1320px;
+    height: 616px;
+    margin: auto;
+    border: 5px solid rgb(255, 199, 199);
+    background-color: rgb(255, 199, 199);
+    margin-top: 5%;
+    text-align: center;
+}
+
+.subscriber img {
+    padding-top: 30px;
+}
+
+.subscriber h3 {
+    color: #070211;
+    text-align: center;
+    font-size: 48px;
+    text-transform: capitalize;
+}
+
+.subscriber p {
+    color: rgba(7, 2, 17, 0.60);
+    text-align: center;
+    font-size: 20px;
+    margin: 0 200px;
+}
+
+.small-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.small-container button {
+    border-radius: 0px 50px 50px 0px;
+    background: #F00;
+}
+
+.small-container h5 {
+
+    padding-left: 5px;
+    padding-bottom: 5px;
+    color: rgba(7, 2, 17, 0.30);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+
+}
+
+.subscriber .small-container {
+    width: 648px;
+    height: 72px;
+    margin: auto;
+    border: 5px solid rgb(255, 255, 255);
+    background-color: rgb(255, 199, 199);
+    margin-top: 5%;
+    text-align: center;
+    border-radius: 50px;
+    background: #FFF;
+}
+
+.footer-container {
+    background-color: #070211;
+    border: #070211;
+    width: 100%;
+    height: 609px;
+    margin-top: 90px;
+    text-align: center;
+}
+
+.footer-container .footer-row-1 .area-contact {
+    color: #FFF;
+    font-size: 24px;
+    padding-top: 80px;
+}
+
+
+.footer-row-2 p {
+    color: #FFF;
+    font-family: Inter;
+    font-size: 24px;
+    padding-top: 60px;
+}
+
+.footer-row-2 .unsubscribe{
+    float:inline-end;
+    padding-right: 50px;
+}
