--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,10 @@
 * {
-
+    padding: 0;
+    margin: 0;  
     font-family: 'Merriweather', serif;
     font-family: 'Inter', sans-serif;
     font-family: 'Merriweather', serif;
+    box-sizing: border-box;
 }
 
 /* header content */
@@ -11,12 +13,12 @@
 }
 
 .banner img {
+    background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
     max-width: 100%;
     height: auto;
     margin-top: 60px;
     margin-left: 300px;
     border-radius: 16px;
-    background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
 }
 
 .banner-text {
@@ -76,6 +78,14 @@
     position: relative;
     margin-bottom: 120px;
 }
+.banner-2 .button{
+    margin-top:10px;
+    padding: 15px;
+    background-color: red;
+    color: white;
+    
+
+}
 
 .banner-2 img {
     max-width: 1320px;
@@ -133,6 +143,7 @@
     bottom: 35%;
     color: #FFF;
 }
+
 
 .primary-color {
     color: rgb(19, 175, 247);
@@ -261,7 +272,7 @@
 }
 
 .portfolio {
-    margin: 0 285px;
+    margin: 0 300px;
     padding-top: 70px;
 }
 
@@ -269,6 +280,7 @@
     color: #F00;
     font-size: 24px;
     font-weight: 500;
+    padding-bottom: 20px ;
 }
 
 .portfolio h3 {
@@ -276,12 +288,14 @@
     font-size: 48px;
     font-weight: 900;
     text-transform: capitalize;
+    padding-bottom: 20px ;
 }
 
 .portfolio p {
     color: rgba(7, 2, 17, 0.60);
     font-size: 20px;
     font-weight: 400;
+    padding-bottom: 20px ;
 }
 
 .image-container {
@@ -334,6 +348,7 @@
 .small-container {
     display: flex;
     justify-content: space-between;
+    text-align: center;
 }
 
 .small-container button {
@@ -342,9 +357,9 @@
 }
 
 .small-container h5 {
-
+    margin-top: 20px;
     padding-left: 5px;
-    padding-bottom: 5px;
+    padding-bottom: 7px;
     color: rgba(7, 2, 17, 0.30);
     text-align: center;
     font-size: 18px;
